@@ -1,5 +1,6 @@
 applauncherd (1.0.9) unstable; urgency=low
 
+  * Changes: Improve test debug output.
   * Fixes: NB#277092 - With Applauncher Gallery process does not release ~10 MB dirty memory when in background
 
  -- Nimika Keshri <nimika.1.keshri@nokia.com>  Wed, 31 Aug 2011 13:30:06 +0300
